#######################################
# Changelog of the check_hpasm plugin #
#######################################

4.2.1
- added timeout handling
- better hpacucli da controller handling
- fix a bug in memory detection (0 dimms were shown) (Thanks Anthony Cano)

4.2 2010-03-20
- added temperatures for bladesystems (although not implemented by HP)
- added fuses for bladesystems
- added enclosure managers for bladesystems
- added blacklisting for scsi devices (scco,scld,scpd) (Thanks Marco Hill)
- added blacklisting for overall fan status (ofs) (Thanks Thomas Jampen)

4.1.2.1 2010-03-03
- fixed a harmless bug in BladeCenter::Powersupply output

4.1.2 2010-02-09
- fixed a severe bug in detecting multiple logical drives with hpacucli (Thanks Trond Hasle)

4.1.1 2010-01-07
- detect more smart array types when run in local mode (Thanks Trond Hasle)

4.1 2009-12-07
- added more details for bladecenters (power suppl., server blades)
- fixed a bug in powersupply checks with hpasmcli (Thanks Guillaume)

4.0.1 2009-12-02
- added the missing output for --help
- non-redundant fans are now tolerated if the global fan status says "ok"
- added detection for servers with a hidden model description
- fixed a bug in celsius-fahrenheit-conversion

4.0 2009-11-30
- added support for the new g6-models
- complete rewrite of the code
- autodetection for proliant, bladecenter and storage
- detailed dump of the hardware with -vvv
- new format for blacklist

3.5.1 2009-04-22
- fixed a bug where the server didn't reveal serial no. and rom rev. (thanks Daniel Rich)
- fixed a bug in the snmpv3 code.

3.5 2009-03-20
- added support for SNMPv3
- added new parameter --port

3.2.1 2009-02-26 
- fixed a bug which showed degraded dimms as missing. (thanks matt at adicio.com)

3.2 2009-02-20
- added support for external disk arrays. (M. M. has a MSA20)

3.1.1.1 2009-02-13
- added an error message when sudo was configured with requiretty=yes. (thanks Jeff The Riffer)

3.1.1 2009-02-06